# pds-project

./: .gitignore  README.md  requirements.md
Editor/: CMakeLists.txt  LoginWindow.cpp  LoginWindow.h  RegistrationWindow.h  Server.cpp  Server.h  TextEdit.cpp  TextEdit.h  main.cpp
Editor/LoginFiles/: filePasswords.txt  fileUsernames.txt
Lab 3_fode/: NetworkServer.cpp  SharedEditor.cpp  SharedEditor.h  Symbol.cpp  Symbol.h  main.cpp
client/: CMakeLists.txt  FileHandler.cpp  MainEditor.cpp  MainEditor.ui  NewFile.ui  ProfileSettingsWin.ui  SaveAsDialog.h  SaveAsDialog.ui  Symbol.cpp  Symbol.h  User.cpp  User.h  WelcomeWin.ui  cancellationwindow.ui  client.cpp  client.h  filechoicewindow.ui  icons.qrc  login.ui  loginwindow.ui  main.cpp  newFile.cpp  newFile.h  registrationwindow.ui  settingswindow.ui
editor/: CMakeLists.txt  DeleteAccountWin.ui  FileHandler.h  FileSaver.h  FracPosition.cpp  FracPosition.h  LoginWin.ui  MainEditor.cpp  MainEditor.h  MainEditor.ui  MyTextArea.cpp  MyTextArea.h  MyTextEditor.cpp  MyTextEditor.h  NewFile.ui  ProfileSettingsWin.ui  SaveAsDialog.cpp  SaveAsDialog.h  SignupWin.ui  Symbol.cpp  Symbol.h  User.h  WelcomeWin.ui  WelcomeWin2.ui  WelcomeWinClone.ui  client.cpp  client.h  icons.qrc  main.cpp  provaQT.cpp  ui_MainEditor.h
lab_3 (CRDT)/: CMakeLists.txt  Message.cpp  Message.h  NetworkServer.h
provaQT/: FileSaver.cpp  FileSaver.h  mainProva.cpp  provaQT.cpp  provaText.ui  saveDialog.ui
reference_editor/: RegistrationWindow.cpp
server/: CMakeLists.txt  FileHandler.cpp  FileHandler.h  FracPosition.cpp  FracPosition.h  MyTextArea.cpp  MyTextArea.h  Session.cpp  Session.h  Symbol.cpp  Symbol.h  SymbolPrototype.cpp  User.cpp  User.h  db_operations.cpp  db_operations.h  exceptions.h  main.cpp  pds_db  server.cpp  server.h  server.ui  ui_server.h
server/files/: 1  2  3  4  Vediamo  a  altraprova  bo  fileNuovo  g  gioco  gioia  hi  mickeyFile  myfile  newfile  nuovoFile  pk  prova  q  qualcosina  speriamo  test  test1  z
